[package]
name = "ttaw"
description = "talking to a wall, a piecemeal natural language processing library"

version = "0.1.0"
license = "MIT"

authors = ["Shea Newton <shnewto@gmail.com>"]

homepage = "https://github.com/shnewto/ttaw"
repository = "https://github.com/shnewto/ttaw"
readme = "README.md"

keywords = ["nlp", "rhyme", "alliteration", "double-metahone" ]

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
log = "0.4"
serde_json = "1.0.41"
reqwest = "0.9.22"

[dev-dependencies]
tempfile = "3"