[package]
name = "ttaw"
description = "talking to a wall, a piecemeal natural language processing library"
# don't manually edit this version unless you're sure you want to circumvent the process documented in RELEASE.md
version = "0.3.0"
license = "MIT"

authors = ["Shea Newton <shnewto@gmail.com>"]

homepage = "https://github.com/shnewto/ttaw"
repository = "https://github.com/shnewto/ttaw"
readme = "README.md"

keywords = ["nlp", "rhyme", "alliteration", "double-metahone", "CMUdict" ]

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
log = "0.4"
serde_json = "1.0.41"
reqwest = { version = "0.12.0", features = ["blocking"] }

[dev-dependencies]
tempfile = "3"
